<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.markkko.povezime.app.home.HomeActivity">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/menu_my_profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_requests"
        android:orderInCategory="100"
        android:title="@string/menu_all_requests"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_add_car"
        android:orderInCategory="100"
        android:title="@string/menu_add_car"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_log_out"
        app:showAsAction="never"/>
</menu>
