<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_background"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fromInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/from_autocomplete_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/from"
                    android:maxLines="1"
                    android:textColor="@color/text_gray"
                    android:textColorHint="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/to_autocomplete_places"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/to"
                    android:maxLines="1"
                    android:textColor="@color/text_gray"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/dateButto"
                android:layout_width="130dp"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/date_shape"
                android:text="@string/date"
                android:textAllCaps="false"/>


            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

            <CheckBox
                android:id="@+id/oneDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/colorAccent"
                android:text="@string/oneDay"
                android:textColor="@color/text_gray"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                >

                <EditText
                    android:id="@+id/seats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/freeCap"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <Switch
                android:id="@+id/luggage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/luggage"
                android:textColor="@color/text_gray"/>


            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/login_shape"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>
